--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -4,7 +4,7 @@
                                              android:layout_height="match_parent">
 
     <TextView
-            android:text="TextView"
+            android:text="ConstraintLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView" android:layout_marginTop="16dp"
@@ -19,7 +19,9 @@
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toEndOf="@+id/textView"
             android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginBottom="3dp"
-            app:layout_constraintBottom_toTopOf="@+id/button2"/>
+            app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.0" android:scrollbars="vertical"
+            android:scrollHorizontally="false"/>
     <Button
             android:text="CANCEL"
             android:layout_width="wrap_content"
