--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -36,4 +36,10 @@
             app:layout_constraintEnd_toStartOf="@+id/button2"
             android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
             app:layout_constraintBaseline_toBaselineOf="@+id/button2"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/ball_100x100"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:id="@+id/imageView"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
 </android.support.constraint.ConstraintLayout>
